<resources>
    <string name="nexus_ws_url">wss://nexus.ws/json-1.0/</string>
    <string name="about_url">http://spotmint.com/web/about.html</string>

    <string name="app_name">SpotMint</string>
    <string name="set_preferences">SpotMint Settings</string>

    <string name="general_settings">Energy Saver</string>
    <string name="reduced_gps_after_title">Reduced GPS After</string>
    <string name="reduced_gps_after_summary">Duration before using low accuracy GPS: %d</string>
    <string name="reduced_gps_accuracy_title">Reduced GPS Accuracy</string>
    <string name="reduced_gps_accuracy_summary">Low accuracy GPS range: %s</string>
    <string name="disconnect_timeout_title">Disconnect Timeout</string>
    <string name="disconnect_timeout_summary">Duration before auto-disconnect and shutdown GPS: %s</string>

    <string name="menu_about">About</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_share">Share</string>

    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_status">Status</string>

    <string name="channel_enter_new">Enter new channel</string>
    <string name="channel_name">channel</string>
    <string name="channel_tap_to_change">tap-to-change</string>

    <string name="update_button">Update</string>
    <string name="clear_button">Clear</string>

    <string name="share_subject">Join us on channel %s</string>
    <string name="share_text" formatted="false"><![CDATA[Join us with your browser %s or your mobile app %s]]></string>

    <string name="notification_ticker">SpotMint</string>
    <string name="notification_title">SpotMint</string>
    <string name="notification_text">Broadcast on channel %s</string>
    <string name="notification_autodisconnect_text">SpotMint auto-disconnected after %d minutes (see settings).</string>


    <string name="callout_now">Now</string>
    <string name="callout_sec_ago" formatted="false"><![CDATA[%d sec ago]]></string>
    <string name="callout_min_ago" formatted="false"><![CDATA[%d min ago]]></string>
    <string name="callout_long_time_ago">Long time ago</string>



</resources>