<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
        android:title="@string/general_settings">

    <ListPreference
            android:title="@string/reduced_gps_after_title"
            android:summary="@string/reduced_gps_after_summary"
            android:defaultValue="5"
            android:entries="@array/reduced_gps_after_entries"
            android:entryValues="@array/reduced_gps_after_values"
            android:key="reduced_gps_after"
            android:persistent="true"
            />

    <ListPreference
            android:title="@string/reduced_gps_accuracy_title"
            android:summary="@string/reduced_gps_accuracy_summary"
            android:defaultValue="10"
            android:entries="@array/reduced_gps_accuracy_entries"
            android:entryValues="@array/reduced_gps_accuracy_values"
            android:key="reduced_gps_accuracy"
            android:persistent="true"
            />


    <ListPreference
            android:title="@string/disconnect_timeout_title"
            android:summary="@string/disconnect_timeout_summary"
            android:defaultValue="60"
            android:entries="@array/disconnect_timeout_entries"
            android:entryValues="@array/disconnect_timeout_values"
            android:key="disconnect_timeout"
            android:persistent="true"
            />

</PreferenceCategory>
</PreferenceScreen>